@@ -1,4 +1,7 @@
 0.4.2
+Fixed wrong button label on open dialog.
+Fixed opening utf16 encoded file.
+Fixed open as hexdump not writing to new tab.
 Fixed doc viewer not displaying properly in a tab.
 Fixed Recent menu again!
 Fixed rebuild tab list on restoring session.
